Barra de navegacion en Html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
                     <img src="img/logo.svg" alt="logo nucleos">
                 </div>
 
-                
+                <nav class="navegacion">
+                    <a href="#" class="navegacion__link">¿Qué es?</a>
+                    <a href="#" class="navegacion__link">¿Cómo Funciona?</a>
+                    <a href="#" class="navegacion__link">Precios</a>
+                    <a href="#" class="navegacion__link">Contratar</a>
+                </nav>
             </div>
 
             <div class="header__grid">
