Titulo y Texto en Html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
             </div>
 
             <div class="header__grid">
-
+                <div class="header__texto">
+                    <h1 class="header__heading">Recive y Realiza Pagos con Nucleus</h1>
+                    <a class="header__boton" href="#">Obtener Cuenta</a>
+                </div>
             </div>
         </div>
     </header>
