Imagen1 App en Html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                     <h1 class="header__heading">Recive y Realiza Pagos con Nucleus</h1>
                     <a class="header__boton" href="#">Obtener Cuenta</a>
                 </div>
+
+                <div class="header__grafico">
+                    <img src="img/app_1.svg" alt="imagen nucleus app" class="header__imagen">
+                </div>
             </div>
         </div>
     </header>
