Creando la transision en el Listado

--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
                 <div class="listado">
                     <div class="listado__elemento">
                         <h2 class="listado__heading">Fácil</h2>
-                        <p>Crea una Cuenta, envia tu documentación y comienza a utilizar nucleus en un par de horas.</p>
+                        <p class="listado__texto">Crea una Cuenta, envia tu documentación y comienza a utilizar nucleus en un par de horas.</p>
                     </div>
                     <div class="listado__elemento">
                         <h2 class="listado__heading">Seguro</h2>
-                        <p>Por su Tecnologia Digital nucleus es imposible de hackear o robar.</p>
+                        <p class="listado__texto">Por su Tecnologia Digital nucleus es imposible de hackear o robar.</p>
                     </div>
                     <div class="listado__elemento">
                         <h2 class="listado__heading">Administrable</h2>
-                        <p>Añade o transfierre a tu banco, añade limites o controla tus gastos.</p>
+                        <p class="listado__texto">Añade o transfierre a tu banco, añade limites o controla tus gastos.</p>
                     </div>
                 </div>
 
